@@ -118,6 +118,7 @@ configuration file. The config database
 .BR slapd\-config (5),
 is always the first database, so use
 .B \-n 0
+to select it.
 
 The
 .B \-n
